name:                smtp
version:             0.1.0.0
synopsis:            Simple Message Transfer Protocal (Haskell Library)
description:         Simple Message Transfer Protocal (Haskell Library)
license:             BSD3
license-file:        LICENSE
author:              Nicolas DI PRIMA
maintainer:          nicolas@di-prima.fr
copyright:           Nicolas DI PRIMA <nicolas@di-prima.fr>
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.SMTP
                     , Network.SMTP.Monad
                     , Network.SMTP.Client
                     , Network.SMTP.Parser
                     , Network.SMTP.Types
  build-depends:       base >=4.7 && <5
                     , bsparse
                     , byteable
                     , bytestring
                     , connection
                     , containers
                     , data-default-class
                     , dns
                     , hourglass
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite smtp-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  Main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , smtp
                     , bsparse
                     , byteable
                     , bytestring
                     , containers
                     , QuickCheck >= 2
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit

Executable smtp-cli
  default-language:    Haskell2010
  hs-source-dirs:      cli
  Main-is:             Main.hs
  ghc-options:         -Wall

  build-depends:       base >=4.7 && <5
                     , bytestring
                     , hourglass
                     , smtp

source-repository head
  type: git
  location: https://github.com/NicolasDP/hs-smtp
